コーディング4回目　デザインカフェ２

--- a/designcafe/index.html
+++ b/designcafe/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
+    <!-- ヘッダー -->
 
     <header id="header">
-        <!-- ヘッダー -->
         <div class="header-container">
             <h1 class="logo">
                 <a href="">
@@ -37,6 +37,8 @@
             <img src="./images/pc_first-100.jpg" alt="カフェ店内の様子">
         </div>
     </header>
+
+    <!-- メイン -->
 
     <main class="main">
         <div class="container">
@@ -138,15 +140,15 @@
                     <ul class="event_wrap">
                         <li class="event_contents">
                             <p>2020.06.23</p>
-                            <p class="event_text">7月はイベント出店のため0/0お休みします</p>
+                            <p class="event_text"><a href="">7月はイベント出店のため0/0お休みします</a></p>
                         </li>
                         <li class="event_contents">
                             <p>2020.03.15</p>
-                            <p class="event_text">春の新商品新発売。話題のあのブランドとコラボ</p>
+                            <p class="event_text"><a href="">春の新商品新発売。話題のあのブランドとコラボ</a></p>
                         </li>
                         <li class="event_contents">
                             <p>2020.02.06</p>
-                            <p class="event_text">コーヒーの日で30％OFFイベントを開催［3日間限定］</p>
+                            <p class="event_text"><a href="">コーヒーの日で30％OFFイベントを開催［3日間限定］</a></p>
                         </li>
                     </ul>
 
@@ -175,7 +177,7 @@
     </main>
 
     <!-- footer -->
-    <footer>
+    <footer class="footer">
         <div class="footer_container">
             <div class="logo">
                 <img src="./images/design_cafe_logo_footer@2x.png" alt="デザインカフェ">
